# embedded_lang

./: Cargo.toml  README.md
.github/workflows/: dependabot.yml  rust.yml
examples/: basic_usage.rs  en.lang.json  fr.lang.json
src/: language.rs  language_set.rs  lib.rs  macros.rs
