[package]
name = "embedded-lang"
description = "Embedded language resources for rust applications"
license = "MIT OR Apache-2.0"
keywords = ["language", "text", "json", "embedded"]
categories = ["accessibility", "encoding", "localization"]
repository = "https://github.com/rscarson/embedded_lang"
readme = "readme.md"
version = "0.5.2"
edition = "2021"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]
version-sync = "0.9"